loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:4: error: ')' expected but ';' found.
} while (sortieTrouvee(); == false){
                        ^Poucet1:4: error: ';' expected but 'false' found.
} while (sortieTrouvee(); == false){
                             ^