loopdowhile.Poucet1.scala.code
var nbBaggle = 0
do{
  avance()
} while (sortieTrouvee(); == false){
  	for (pas <- 1 to 5){
   	 avance()
    	nbBaggle += 1
  	}
  	if (nbBaggle <= 2){
    	droite()
  	}
  	if (nbBaggle >= 3){
    	gauche()
  	}
	}